# scalerdb

./: .gitignore  CMakeLists.txt  README.md  demo_persistence.cpp  main.cpp  make.sh  setup.sh  test_setup.cpp
src/: main.cpp
src/core/: column.hpp  database.cpp  database.hpp  fast_json_loader.hpp  msgpack_types.h  parallel_persistence.hpp  row.hpp  table.hpp  threadpool.hpp  value.hpp
tests/: CMakeLists.txt  test_core_data_model.cpp  test_main.cpp  test_performance.cpp  test_serialization.cpp  test_threading.cpp
